<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Coffee</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="order">Order</string>
    <string name="order_summary">Order Summary</string>
    <string name="quantity">"Quantity: "</string>
    <string name="thank_you">Thank You !!</string>
    <string name="Whipped_Cream">"Add Whipped Cream? "</string>
    <string name="Chocolate">"Add Chocolate? "</string>
    <string name="_2" translatable="false">2</string>
    <string name="total">"Total: "</string>
    <string name="name_text">Name: <xliff:g example="Amy" id="name">%s</xliff:g></string>
    <string name="name">Name</string>
</resources>