<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:hint="@string/name"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/toppings_text_view"
            android:text="@string/toppings"
            style="@style/Base.TextAppearance.AppCompat.Headings"/>

        <CheckBox
            android:id="@+id/checkbox_whipped_cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:checked="false"
            android:paddingStart="24sp"
            android:text="@string/whipped_cream"
            android:textSize="18sp"
            android:textColor="@color/white"/>

        <CheckBox
            android:id="@+id/checkbox_chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:checked="false"
            android:paddingLeft="24sp"
            android:text="@string/chocolate"
            android:textSize="18sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/quantity_text_view"
            android:text="@string/quantity"
            style="@style/Base.TextAppearance.AppCompat.Headings"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/decrementButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:onClick="decreaseQuantity"
                android:text="-"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/quantityNo_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/decrementButton"
                android:paddingTop="32dp"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/incrementButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:layout_toRightOf="@+id/quantityNo_text_view"
                android:onClick="increaseQuantity"
                android:text="+"
                android:textColor="@color/white" />

        </RelativeLayout>

        <TextView
            android:text="@string/order_summary"
            style="@style/Base.TextAppearance.AppCompat.Headings" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:text="₹ 10.00/-"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>